Добавил и настроил модалку

--- a/courses.html
+++ b/courses.html
@@ -15,6 +15,255 @@
 </head>
 
 <body>
+	<div class="popups">
+		<div class="popup_dark"></div>
+		<div class="container">
+			<div class="popup__wrap popup-one">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close1" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-two">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close2" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-three">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close3" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-four">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close4" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-five">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close5" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-six">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close6" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-seven">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close7" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="popup__wrap popup-eight">
+
+				<div class="popup__info">
+					<div class="popup__info__title">
+						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<img id="popup-close8" src="./src/assets/img/close.svg" alt="">
+					</div>
+					<div class="popup__info__desc">
+						<div class="buy">
+							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+						</div>
+						<div class="text">
+							<p>Список закупки</p>
+							<p>Это то, что:</p>
+							<ul>
+								<li><b>- Экономит время</b> при закупке позиций для работы </li>
+								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
+								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
+									расширяться или переезжать)</li>
+								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
+									разбегаются, как же не ошибиться и не купить фигню)</li>
+							</ul>
+							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне </p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Bg video -->
 	<div id="darkness" class="darkness"></div>
 	<video autoplay muted loop id="myVideo">
@@ -30,7 +279,7 @@
 						<a href="#offers-scroll">- Услуги</a>
 					</li>
 					<li>
-						<a href="#examples-scroll">- Примры работ</a>
+						<a href="#examples-scroll">- Примeры работ</a>
 					</li>
 					<li>
 						<a href="./index.html">- ramzil_nail</a>
@@ -58,7 +307,7 @@
 					<a href="#offers-scroll">Услуги</a>
 				</li>
 				<li>
-					<a href="#examples-scroll">Примры работ</a>
+					<a href="#examples-scroll">Примeры работ</a>
 				</li>
 				<li>
 					<a href="./index.html">ramzil_nail</a>
@@ -93,12 +342,14 @@
 								<span>Медицинское среднеспециональное образование</span>
 							</li>
 							<li>
-								<span>Дополнительное образование</span> подолога « Лечение и восстановление травмированных и
+								<span>Дополнительное образование</span> подолога « Лечение и восстановление
+								травмированных и
 								деформированных
 								ногтей, обработка кожи рук и стоп людей с хроническими заболеваниями»
 							</li>
 							<li>
-								<span>Дополнительное образование</span> по направлению инструктор ногтевого сервиса с лицензией
+								<span>Дополнительное образование</span> по направлению инструктор ногтевого сервиса с
+								лицензией
 								Право выдавать дипломы о дополнительном образовании мастера ногтевого сервиса
 							</li>
 						</ul>
@@ -111,7 +362,8 @@
 								<span>Более 45</span> обучающих курсов стоимостью 400.000
 							</li>
 							<li>
-								<span>Обладатель Гран При</span> в международном чемпионате по маникюру и педикюру «Золотая Долина» 9
+								<span>Обладатель Гран При</span> в международном чемпионате по маникюру и педикюру
+								«Золотая Долина» 9
 								золотых, 2 серебряных и одна бронзовая победы
 							</li>
 							<li>
@@ -154,8 +406,147 @@
 					<img src="./src/assets/img/base_course_man.jpg" alt="">
 					<div class="courses__item__info">
 						<h2>Чек-лист мастера</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">1000</p>
+								<p class="new">БЕСПЛАТНО</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-one" class="more">Подробнее</button>
+							</span>
+						</div>
 					</div>
 				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>ПРОБНЫЙ ДЕНЬ «НОВАЯ ПРОФЕССИЯ»</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">5000</p>
+								<p class="new">3000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-two" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>«МАСТЕР ЗДЕСЬ И СЕЙЧАС»
+							БАЗОВЫЙ КУРС ПРОФЕССИОНАЛЬНОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК
+						</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">24000</p>
+								<p class="new">18000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-three" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК»
+						</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">15000</p>
+								<p class="new">12000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-four" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>БАЗОВЫЙ КУРС КОМБИНИРОВАННОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК САМОЙ СЕБЕ В ДОМАШНИХ УСЛОВИЯХ
+						</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">5000</p>
+								<p class="new">7000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-five" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
+							ЭКСПЕРТА В МАНИКЮРЕ
+						</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">10000</p>
+								<p class="new">8000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-six" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
+							ЭКСПЕРТА В ПЕДИКЮРЕ
+						</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">10000</p>
+								<p class="new">8000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-seven" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>БАЗОВЫЙ КУРС НАРАЩИВАНИЯ НОГТЕЙ БЕЗ ОПИЛА
+						</h2>
+						<div class="bottom">
+							<div>
+								<p class="old">15000</p>
+								<p class="new">12000</p>
+							</div>
+							<span>
+								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
+								<button id="course-eight" class="more">Подробнее</button>
+							</span>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</section>
