--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<a href="#offers-scroll">- Услуги</a>
 					</li>
 					<li>
-						<a href="#examples-scroll">- Примры работ</a>
+						<a href="#examples-scroll">- Примеры работ</a>
 					</li>
 					<li>
 						<a href="./courses.html">- ramzil_school</a>
@@ -58,7 +58,7 @@
 					<a href="#offers-scroll">Услуги</a>
 				</li>
 				<li>
-					<a href="#examples-scroll">Примры работ</a>
+					<a href="#examples-scroll">Примеры работ</a>
 				</li>
 				<li>
 					<a href="./courses.html">ramzil_school</a>
@@ -246,7 +246,7 @@
 					<ul>
 						<li>
 							<div>What's App:</div>
-							<a href="https://api.whatsapp.com/send/?phone=89022277790&text=Здравствуйте%2C+у+меня+есть+вопрос">+7-902-227-77-90</a>
+							<a href="https://wa.me/+79022277790">+7-902-227-77-90</a>
 						</li>
 						<li>
 							<div>Вконтакте:</div>
