Пофиксил курсы, сменил цвета, оптимизировал ассеты

--- a/courses.html
+++ b/courses.html
@@ -267,7 +267,7 @@
 	<!-- Bg video -->
 	<div id="darkness" class="darkness"></div>
 	<video autoplay muted loop id="myVideo">
-		<source src="./src/assets/video/IMG_5085-_1_ (online-video-cutter.com).mp4" type="video/mp4">
+		<source src="./src/assets/video/school.webm" type="video/mp4">
 	</video>
 	<!-- Popup navigation -->
 	<nav class="popup-nav">
@@ -403,7 +403,7 @@
 			</div>
 			<div class="courses__wrap">
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/6.png" alt="">
 					<div class="courses__item__info">
 						<h2>Чек-лист мастера</h2>
 						<div class="bottom">
@@ -420,7 +420,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/7.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОБНЫЙ ДЕНЬ «НОВАЯ ПРОФЕССИЯ»</h2>
 						<div class="bottom">
@@ -437,7 +437,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/1.png" alt="">
 					<div class="courses__item__info">
 						<h2>«МАСТЕР ЗДЕСЬ И СЕЙЧАС»
 							БАЗОВЫЙ КУРС ПРОФЕССИОНАЛЬНОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК
@@ -456,7 +456,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/3.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК»
 						</h2>
@@ -474,7 +474,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/1.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС КОМБИНИРОВАННОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК САМОЙ СЕБЕ В ДОМАШНИХ УСЛОВИЯХ
 						</h2>
@@ -492,7 +492,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/8.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
 							ЭКСПЕРТА В МАНИКЮРЕ
@@ -511,7 +511,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/5.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
 							ЭКСПЕРТА В ПЕДИКЮРЕ
@@ -530,7 +530,7 @@
 				</div>
 
 				<div class="courses__item">
-					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<img src="./src/assets/img/Courses/4.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС НАРАЩИВАНИЯ НОГТЕЙ БЕЗ ОПИЛА
 						</h2>
