--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Bg video -->
 	<div id="darkness" class="darkness"></div>
 	<video autoplay muted loop id="myVideo">
-		<source src="./src/assets/video/IMG_5095.mp4" type="video/mp4">
+		<source src="./src/assets/video/nail.webm" type="video/mp4">
 	</video>
 	<!-- Popup navigation -->
 	<nav class="popup-nav">
@@ -200,22 +200,22 @@
 					<!--   <div class="slider"> -->
 					<div class="items" id="items">
 						<div class="item">
-							<img src="./src/assets/img/1 (1).png" alt="">
+							<img src="./src/assets/img/rewies_nail/1 (1).png" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/1 (2).png" alt="">
+							<img src="./src/assets/img/rewies_nail/1 (2).png" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/1 (3).png" alt="">
+							<img src="./src/assets/img/rewies_nail/1 (3).png" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/1 (4).png" alt="">
+							<img src="./src/assets/img/rewies_nail/1 (4).png" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/1 (5).png" alt="">
+							<img src="./src/assets/img/rewies_nail/1 (5).png" alt="">
 						</div>
 						<div class="item">
-							<img src="./src/assets/img/1 (6).png" alt="">
+							<img src="./src/assets/img/rewies_nail/1 (6).png" alt="">
 						</div>
 					</div>
 					<!--   </div> -->
