--- a/courses.html
+++ b/courses.html
@@ -27,12 +27,12 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/6.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h4>Список закупки</h4>
+							<h3>Это то, что:</h3>
 							<ul>
 								<li><b>- Экономит время</b> при закупке позиций для работы </li>
 								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
@@ -41,20 +41,11 @@
 								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
 									разбегаются, как же не ошибиться и не купить фигню)</li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
-							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
-							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+							<p>
+								Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
+								просто напиши мне
+							</p>
+
 						</div>
 					</div>
 				</div>
@@ -63,27 +54,53 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>ПРОБНЫЙ ДЕНЬ «НОВАЯ ПРОФЕССИЯ» </h1>
 						<img id="popup-close2" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/7.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h4>Пробный день - это рациональный и логичный ответ на вопросы:</h4>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>-«Хочу ли я в beauti-сферу?» </li>
+								<li>-«Хочу ли я заниматься маникюром?»</li>
+								<li>-«Смогу ли я работать с клиентами?» </li>
+								<li>-«Подходит ли мне данное направление?» </li>
+								<li>-«Стоит ли тратить столько средств на обучение, материалы, оборудование на профессию, в которой возможно не буду работать?»</li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+
+							<h4>Содержание:</h4>
+							<h3>ТЕОРИЯ О ПРОФЕССИИ:</h3>
+							<ul>
+								<li>История маникюра</li>
+								<li>Введение в профессию</li>
+								<li>Списки материалов и оборудования</li>
+								<li>Финансовая платформа для старта</li>
+								<li>Правила работы и организация рабочего процесса</li>
+							</ul>
+							<h3>ТЕОРИЯ МАНИКЮРА</h3>
+							<ul>
+								<li>Анатомия и Физиология ногтя</li>
+								<li>Инструменты и оборудование</li>
+								<li>План выполнения маникюра</li>
+								<li>Материалы и их использование</li>
+								<li>Покрытие ногтей лаком, гель лаком</li>
+							</ul>
+							<h3>ПРАКТИКА</h3>
+							<p>Работа с типсами, опиливаем, покрываем, рисуем
+								Попробуем всё на себе, опил формы, работа с кутикулой
+								Потренируемся владеть аппаратом и кисточкой</p>
+							<h3>Срок обучения: 1 день </h3>
+							<h3>Документ: Сертификат 📄 </h3>
+							<h3>Дополнительно:</h3>
+							<ul>
+								<li>Поддержка онлайн </li>
+								<li>Консультации по любым возникающим вопросам </li>
+								<li>Скидочная программа лояльности при решении получить профессиональное, официальное образование в данном направлении</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -97,7 +114,7 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/1.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
@@ -126,7 +143,7 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/3.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
@@ -155,7 +172,7 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/1.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
@@ -184,7 +201,7 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/4.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
@@ -213,7 +230,7 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/5.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
@@ -242,7 +259,7 @@
 					</div>
 					<div class="popup__info__desc">
 						<div class="buy">
-							<img src="./src/assets/img/base_course_man.jpg" alt="">
+							<img src="./src/assets/img/Courses/8.png" alt="">
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
@@ -276,10 +293,13 @@
 				<h1>Навигация по сайту</h1>
 				<ul>
 					<li>
-						<a href="#offers-scroll">- Услуги</a>
+						<a href="#about-scroll">- Обо мне</a>
 					</li>
 					<li>
-						<a href="#examples-scroll">- Примeры работ</a>
+						<a href="#courses-scroll">- Курсы</a>
+					</li>
+					<li>
+						<a href="#examples-scroll">- Примеры</a>
 					</li>
 					<li>
 						<a href="./index.html">- ramzil_nail</a>
@@ -304,10 +324,13 @@
 		<ul class="nav__links">
 			<ul>
 				<li>
-					<a href="#offers-scroll">Услуги</a>
+					<a href="#about-scroll">Обо мне</a>
 				</li>
 				<li>
-					<a href="#examples-scroll">Примeры работ</a>
+					<a href="#courses-scroll">Курсы</a>
+				</li>
+				<li>
+					<a href="#examples-scroll">Примеры</a>
 				</li>
 				<li>
 					<a href="./index.html">ramzil_nail</a>
@@ -331,7 +354,7 @@
 		</div>
 	</header>
 	<!-- About -->
-	<section class="about">
+	<section id="about-scroll" class="about">
 		<div class="container">
 			<div class="about__wrap">
 				<div class="about__wrap__left">
@@ -372,7 +395,7 @@
 						</ul>
 					</div>
 					<!-- <img class="about__wrap__left__mapple" src="./src/assets/img/maple.png" alt=""> -->
-					<img class="about__wrap__left__self" src="./src/assets/img/self.png" alt="">
+					<img class="about__wrap__left__self element-animation" src="./src/assets/img/self.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -381,34 +404,34 @@
 		<div class="container">
 			<div class="process__wrap">
 				<div class="process__item">
-					<img src="./src/assets/img/round_nails.png" alt="">
+					<img class="element-animation" src="./src/assets/img/round_nails.png" alt="">
 					<p>"Обучаем профессии мастера маникюра с нуля"</p>
 				</div>
 				<div class="process__item">
-					<img src="./src/assets/img/round_scissors.png" alt="">
+					<img class="element-animation" src="./src/assets/img/round_scissors.png" alt="">
 					<p>"Предоставляем все материалы и моделей для обработки"</p>
 				</div>
 				<div class="process__item">
-					<img src="./src/assets/img/round_grade.png" alt="">
+					<img class="element-animation" src="./src/assets/img/round_grade.png" alt="">
 					<p>"Выдаем диплом государственного образца по окончанию обучения"</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="courses">
+	<section id="courses-scroll" class="courses">
 		<div class="container">
-			<div class="courses__title">
+			<div class="courses__title element-animation">
 				<h1>Наши курсы</h1>
 				<p>"В каждый курс мы вкладываем нашу душу и опыт"</p>
 			</div>
 			<div class="courses__wrap">
-				<div class="courses__item">
+				<div class="courses__item element-animation">
 					<img src="./src/assets/img/Courses/6.png" alt="">
 					<div class="courses__item__info">
 						<h2>Чек-лист мастера</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">1000</p>
+								<p class="old">1000 р.</p>
 								<p class="new">БЕСПЛАТНО</p>
 							</div>
 							<span>
@@ -419,14 +442,14 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
+				<div class="courses__item element-animation">
 					<img src="./src/assets/img/Courses/7.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОБНЫЙ ДЕНЬ «НОВАЯ ПРОФЕССИЯ»</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">5000</p>
-								<p class="new">3000</p>
+								<p class="old">5000 р.</p>
+								<p class="new">3000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -436,7 +459,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
+				<div class="courses__item element-animation">
 					<img src="./src/assets/img/Courses/1.png" alt="">
 					<div class="courses__item__info">
 						<h2>«МАСТЕР ЗДЕСЬ И СЕЙЧАС»
@@ -444,8 +467,8 @@
 						</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">24000</p>
-								<p class="new">18000</p>
+								<p class="old">24000 р.</p>
+								<p class="new">18000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -455,15 +478,15 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
+				<div class="courses__item element-animation">
 					<img src="./src/assets/img/Courses/3.png" alt="">
 					<div class="courses__item__info">
-						<h2>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК»
+						<h2>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК
 						</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">15000</p>
-								<p class="new">12000</p>
+								<p class="old">15000 р.</p>
+								<p class="new">12000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -473,15 +496,15 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
+				<div class="courses__item element-animation">
 					<img src="./src/assets/img/Courses/1.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС КОМБИНИРОВАННОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК САМОЙ СЕБЕ В ДОМАШНИХ УСЛОВИЯХ
 						</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">5000</p>
-								<p class="new">7000</p>
+								<p class="old">5000 р.</p>
+								<p class="new">7000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -491,16 +514,16 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
-					<img src="./src/assets/img/Courses/8.png" alt="">
+				<div class="courses__item element-animation">
+					<img src="./src/assets/img/Courses/4.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
 							ЭКСПЕРТА В МАНИКЮРЕ
 						</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">10000</p>
-								<p class="new">8000</p>
+								<p class="old">10000 р.</p>
+								<p class="new">8000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -510,7 +533,7 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
+				<div class="courses__item element-animation">
 					<img src="./src/assets/img/Courses/5.png" alt="">
 					<div class="courses__item__info">
 						<h2>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА
@@ -518,8 +541,8 @@
 						</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">10000</p>
-								<p class="new">8000</p>
+								<p class="old">10000 р.</p>
+								<p class="new">8000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -529,15 +552,15 @@
 					</div>
 				</div>
 
-				<div class="courses__item">
-					<img src="./src/assets/img/Courses/4.png" alt="">
+				<div class="courses__item element-animation">
+					<img src="./src/assets/img/Courses/8.png" alt="">
 					<div class="courses__item__info">
 						<h2>БАЗОВЫЙ КУРС НАРАЩИВАНИЯ НОГТЕЙ БЕЗ ОПИЛА
 						</h2>
 						<div class="bottom">
 							<div>
-								<p class="old">15000</p>
-								<p class="new">12000</p>
+								<p class="old">15000 р.</p>
+								<p class="new">12000 р.</p>
 							</div>
 							<span>
 								<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
@@ -547,6 +570,58 @@
 					</div>
 				</div>
 
+			</div>
+		</div>
+	</section>
+	<section id="examples-scroll" class="examples" style="background-color: rgb(204, 214, 204); z-index: 70;">
+		<div class="container">
+			<h1 class="examples__title">Примеры работ</h1>
+			<h2 class="examples__title2">"Мы сделали много и не думаем останавливаться"</h2>
+			<div class="examples__wrap">
+				<img class="rotate_left  element-animation" src="./src/assets/img/examples_school/1.webp" alt="">
+				<img class="rotate_right" src="./src/assets/img/examples_school/2.webp" alt="">
+				<img class="rotate_left element-animation" src="./src/assets/img/examples_school/3.webp" alt="">
+				<img class="rotate_right" src="./src/assets/img/examples_school/4.webp" alt="">
+				<img class="rotate_right element-animation" src="./src/assets/img/examples_school/5.webp" alt="">
+				<img class="rotate_left" src="./src/assets/img/examples_school/6.webp" alt="">
+				<img class="rotate_right element-animation" src="./src/assets/img/examples_school/7.webp" alt="">
+				<img class="rotate_left" src="./src/assets/img/examples_school/8.webp" alt="">
+			</div>
+		</div>
+	</section>
+	<!-- Reviews -->
+	<section class="reviews">
+		<div class="container">
+			<h1 class="reviews__title">Отзывы клиентов</h1>
+			<h2 class="reviews__title2">"Наши клиенты всегда довольны нашими услугами"</h2>
+			<div class="reviews__wrap">
+				<div class="slider-container  element-animation">
+					<a class="arrow1" id="leftArrow" href="#">
+						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
+					</a>
+					<!--   <div class="slider"> -->
+					<div class="items" style="min-height: 725px; width: 400px;" id="items">
+						<div class="item">
+							<img src="./src/assets/img/rewies_school/1.webp" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/rewies_school/2.webp" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/rewies_school/3.webp" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/rewies_school/4.webp" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/rewies_school/5.webp" alt="">
+						</div>
+					</div>
+					<!--   </div> -->
+					<a class="arrow2" id="rightArrow" href="#">
+						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
