--- a/courses.html
+++ b/courses.html
@@ -109,7 +109,8 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>«МАСТЕР ЗДЕСЬ И СЕЙЧАС» 
+							БАЗОВЫЙ КУРС ПРОФЕССИОНАЛЬНОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК </h1>
 						<img id="popup-close3" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
@@ -118,18 +119,64 @@
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h4>Базовый курс «Комбинированный маникюр с покрытием гель лак с 0» </h4>
+							<p>Программа обучения с выдачей официального диплома государственного образца с присвоением 
+								профессии «мастер ногтевого сервиса»</p>
+							<h3>Формат обучения: </h3>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>Групповой день с 10:00 до 17:00 2-3 ученика 18.000₽</li>
+								<li>Групповой вечер с 18:00 до 22:00 2-3 ученика 19.000₽ </li>
+								<li>Индивидуальный в любые удобные для вас дни и часы 23.000₽ </li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+							<h3>Документ: Диплом</h3>
+							<h3>Срок обучения: </h3>
+							<ul>
+								<li>Дневной формат 5 дней</li>
+								<li>Вечерний формат 7 дней </li>
+								<li>Индивидуальный 5 дней (дни обучения на ваш выбор) </li>
+							</ul>
+							<h4>Программа:</h4>
+							<h3>Блок 1: Комбинированный маникюр</h3>
+							<ul>
+								<li>- Анатомия и физиология ногтя</li>
+								<li>- Анатомия и физиология ногтя</li>
+								<li>- Анатомия и физиология ногтя</li>
+								<li>- Подготовка ногтевой пластины к покрытию гель лаком</li>
+							</ul>
+							<h3>Блок 2: Покрытие гель лаком</h3>
+							<ul>
+								<li>- Трёхфазная система покрытия</li>
+								<li>- Виды баз, работы с каждым видом</li>
+								<li>- Выравнивание ногтевой пластины базой</li>
+								<li>- Покрытие цветным гель лаком</li>
+								<li>- Виды финишного покрытия, работа с каждым видом</li>
+								<li>- Снятие искусственного материала</li>
+							</ul>
+							<h3>Блок 3: Дополнительные знания</h3>
+							<ul>
+								<li>- Дезинфекции, стерилизации инструментов</li>
+								<li>- Работа с отслойками</li>
+								<li>- Инфекции в работе и работа с проблемными ногтями</li>
+								<li>- Салонные экспресс дизайны: 3 вида</li>
+								<li>- Ремонт, реставрация и донаращивание ногтей</li>
+							</ul>
+							<h3>Блок 4: Справочник развития</h3>
+							<ul>
+								<li>- Список инструментов, материалов и оборудования, которые необходимы для работы мастером</li>
+								<li>- Работа с соц.сетями, оформлением и содержанием</li>
+								<li>- Качественные, красивые, продающие фото работ</li>
+								<li>- Скрипт общения с клиентом</li>
+								<li>- Финансовая составляющая работы, шаблоны, чек-листы для расчетов</li>
+							</ul>
+							<h4>Дополнительно:</h4>
+							<ul>
+								<li>поддержка 1 месяц (онлайн)</li>
+								<li>печатные материалы с информацией </li>
+								<li>внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об 
+									образовании и (или) о квалификации, документах об обучении) </li>
+								<li>оборудованное рабочее место, материалы и модели предоставляются </li>
+								<li>фото и видео контент для социальных сетей ваших работ</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -138,7 +185,7 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>БАЗОВЫЙ КУРС ЭСТЕТИЧЕСКИЙ ПЕДИКЮР С ПОКРЫТИЕМ ГЕЛЬ ЛАК» </h1>
 						<img id="popup-close4" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
@@ -147,18 +194,33 @@
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h4>Программа обучения с выдачей официального диплома государственного образца с присвоением 
+								профессии «мастер ногтевого сервиса» </h4>
+							<h3>Формат обучения: Индивидуальный</h3>
+							<h3>Документ: Диплом </h3>
+							<h3>Срок обучения: 2 дня</h3>
+							<h4>Программа:</h4>
+							<p>Программа учебного процесса состоит из 2 дней и включает в себя две практические отработки.</p>
+							<h3>На курсе мы разберём:</h3>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>Анатомию и физиологию ногтей на ногах</li>
+								<li>Дезинфекцию и стерилизацию инструментов</li>
+								<li>Инструменты и материалы для работы</li>
+								<li>Технику комбинированного педикюра</li>
+								<li>Технику комбинированного педикюра</li>
+								<li>Технику комбинированного педикюра</li>
+								<li>Технику комбинированного педикюра</li>
+								<li>Заболевания и инфекции</li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+							<h4>Дополнительно:</h4>
+							<ul>
+								<li>поддержка 1 месяц (онлайн)</li>
+								<li>печатные материалы с информацией </li>
+								<li>внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об 
+									образовании и (или) о квалификации, документах об обучении) </li>
+								<li>оборудованное рабочее место, материалы и модели предоставляются</li>
+								<li>фото и видео контент для социальных сетей ваших работ</li>
+							</ul>
 						</div>
 					</div>
 				</div>
