Закончил с разделом курсы

--- a/courses.html
+++ b/courses.html
@@ -65,7 +65,7 @@
 						<div class="text">
 							<h4>Пробный день - это рациональный и логичный ответ на вопросы:</h4>
 							<ul>
-								<li>-«Хочу ли я в beauti-сферу?» </li>
+								<li>-«Хочу ли я в beauti-сферу?»</li>
 								<li>-«Хочу ли я заниматься маникюром?»</li>
 								<li>-«Смогу ли я работать с клиентами?» </li>
 								<li>-«Подходит ли мне данное направление?» </li>
@@ -196,7 +196,10 @@
 						<div class="text">
 							<h4>Программа обучения с выдачей официального диплома государственного образца с присвоением 
 								профессии «мастер ногтевого сервиса» </h4>
-							<h3>Формат обучения: Индивидуальный</h3>
+							<h3>Формат обучения:</h3>
+							<ul>
+								<li>Индивидуальный</li>
+							</ul>
 							<h3>Документ: Диплом </h3>
 							<h3>Срок обучения: 2 дня</h3>
 							<h4>Программа:</h4>
@@ -229,7 +232,7 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>БАЗОВЫЙ КУРС КОМБИНИРОВАННОГО МАНИКЮРА С ПОКРЫТИЕМ ГЕЛЬ ЛАК САМОЙ СЕБЕ В ДОМАШНИХ УСЛОВИЯХ</h1>
 						<img id="popup-close5" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
@@ -238,18 +241,29 @@
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h3>Формат обучения: </h3>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>Групповой 2-3 ученика 5.000₽</li>
+								<li>Индивидуальный 7.000₽</li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+							<h3>Документ: Сертификат</h3>
+							<h3>Срок обучения: 1 день </h3>
+							<h4>Программа: </h4>
+							<ul>
+								<li>Анатомия и физиология ногтя</li>
+								<li>Базовые знания о дезинфекции и стерилизации инструментов</li>
+								<li>Комбbнированный маникюр с аппаратом</li>
+								<li>Техника покрытия гель лака</li>
+								<li>Список необходимых материалов и инструментов а так же техники</li>
+							</ul>
+							<h4>Дополнительно: </h4>
+							<ul>
+								<li>✅ поддержка 1 месяц (онлайн) </li>
+								<li>✅ печатные материалы с информацией</li>
+								<li> ✅ скидочная программа лояльности на базовые курсы в случае вашего решения заняться данным направлением профессионально</li>
+								<li>✅списки закупок магазинов и платформ, где можно приобрести все необходимое для работы дома по выгодным ценам </li>
+								<li>✅оборудованное рабочее место, материалы предоставляются</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -258,7 +272,7 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА ЭКСПЕРТА В МАНИКЮРЕ </h1>
 						<img id="popup-close6" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
@@ -267,18 +281,24 @@
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h3>Формат обучения: </h3>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>Групповой 2-3 ученика 8.000₽ </li>
+								<li>Индивидуальный 10.000₽ </li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+							<h3>Документ: Свидетельство </h3>
+							<h3>Срок обучения: 1 день </h3>
+							<h4>Программа: </h4>
+							<p>Программа: индивидуальная, разбираем вопросы и техники, которые волную вас на данный момент, а так же все новые материалы, которые считаются новинками в современной nail-индустрии</p>
+							<h4>Дополнительно: </h4>
+							<ul>
+								<li>✅ поддержка 1 месяц (онлайн) </li>
+								<li>✅ печатные материалы с информацией </li>
+								<li>✅внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об образовании и (или) о квалификации, документах об обучении)</li>
+								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
+								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
+							</ul>
+
 						</div>
 					</div>
 				</div>
@@ -287,7 +307,7 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>ПРОГРАММА ОБУЧЕНИЯ С ВЫДАЧЕЙ ОФИЦИАЛЬНОГО СВИДЕТЕЛЬСТВА О ПОВЫШЕНИИ КВАЛИФИКАЦИИ ДО МАСТЕРА ЭКСПЕРТА В ПЕДИКЮРЕ 10000 8000</h1>
 						<img id="popup-close7" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
@@ -296,18 +316,18 @@
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<h3>Формат обучения:</h3>
+							<ul><li>Индивидуальный</li></ul>
+							<h3>Документ: Свидетельство </h3>
+							<h3>Срок обучения: 1 день</h3>
+							<p>Программа: индивидуальная, разбираем вопросы и техники, которые волную вас на данный момент, а также все новые материалы, которые считаются новинками в современной индустрии</p>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>✅ поддержка 1 месяц (онлайн) </li>
+								<li>✅ печатные материалы с информацией </li>
+								<li>✅внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об образовании и (или) о квалификации, документах об обучении)</li>
+								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
+								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
 						</div>
 					</div>
 				</div>
@@ -316,7 +336,7 @@
 
 				<div class="popup__info">
 					<div class="popup__info__title">
-						<h1>ЧЕК-ЛИСТ МАСТЕРА</h1>
+						<h1>БАЗОВЫЙ КУРС НАРАЩИВАНИЯ НОГТЕЙ БЕЗ ОПИЛА </h1>
 						<img id="popup-close8" src="./src/assets/img/close.svg" alt="">
 					</div>
 					<div class="popup__info__desc">
@@ -325,18 +345,28 @@
 							<a target="_blank" href="https://wa.me/+79022277790" class="enroll">Записаться</a>
 						</div>
 						<div class="text">
-							<p>Список закупки</p>
-							<p>Это то, что:</p>
+							<p>Программа обучения с выдачей официального диплома государственного образца с присвоением профессии «мастер ногтевого сервиса»</p>
+							<h3>Формат обучения: </h3>
 							<ul>
-								<li><b>- Экономит время</b> при закупке позиций для работы </li>
-								<li><b>- Экономит ваши деньги</b> (не купишь лишнего или не нужного)</li>
-								<li><b>- Понадобится для организации</b> нового рабочего места (если планируешь
-									расширяться или переезжать)</li>
-								<li><b>- Поможет в выборе оборудования</b> (рынок предложений настолько велик, что глаза
-									разбегаются, как же не ошибиться и не купить фигню)</li>
+								<li>Групповой 2-3 ученика 12.000₽ </li>
+								<li>Индивидуальный 15.000₽ </li>
 							</ul>
-							<p>Чек лист обустройство маникюрного кабинета и набор инструментов для работы при подписке,
-								просто напиши мне </p>
+							<h3>Документ: Диплом </h3>
+							<h3>Срок обучения: 2 дня </h3>
+							<h4>Программа: </h4>
+							<ul>
+								<li>Инструменты и материалы</li>
+								<li>Техника наращивания</li>
+								<li>Создание формы</li>
+								<li>Виды и техника дизайнов</li>
+							</ul>
+							<ul>
+								<li>✅ поддержка 1 месяц (онлайн) </li>
+								<li>✅ печатные материалы с информацией </li>
+								<li>✅внесение вашей квалификации в ФРДО (Федеральный реестр сведений о документах об образовании и (или) о квалификации, документах об обучении)</li>
+								<li>✅ оборудованное рабочее место, материалы и модели предоставляются </li>
+								<li>✅ фото и видео контент для социальных сетей ваших работ</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -364,7 +394,7 @@
 						<a href="#examples-scroll">- Примеры</a>
 					</li>
 					<li>
-						<a href="./index.html">- ramzil_nail</a>
+						<a href="./index.html">- ramzi_nail</a>
 					</li>
 					<li>
 						<a href="#contacts-scroll">- Контакты</a>
@@ -395,7 +425,7 @@
 					<a href="#examples-scroll">Примеры</a>
 				</li>
 				<li>
-					<a href="./index.html">ramzil_nail</a>
+					<a href="./index.html">ramzi_nail</a>
 				</li>
 				<li>
 					<a href="#contacts-scroll">Контакты</a>
