--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<a href="#examples-scroll">- Примеры работ</a>
 					</li>
 					<li>
-						<a href="./courses.html">- ramzil_school</a>
+						<a href="./courses.html">- ramzi_school</a>
 					</li>
 					<li>
 						<a href="#contacts-scroll">- Контакты</a>
@@ -61,7 +61,7 @@
 					<a href="#examples-scroll">Примеры работ</a>
 				</li>
 				<li>
-					<a href="./courses.html">ramzil_school</a>
+					<a href="./courses.html">ramzi_school</a>
 				</li>
 				<li>
 					<a href="#contacts-scroll">Контакты</a>
