--- a/courses.html
+++ b/courses.html
@@ -487,7 +487,7 @@
 						</ul>
 					</div>
 					<!-- <img class="about__wrap__left__mapple" src="./src/assets/img/maple.png" alt=""> -->
-					<img class="about__wrap__left__self element-animation" src="./src/assets/img/self.png" alt="">
+					<img class="about__wrap__left__self" src="./src/assets/img/self.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -667,8 +667,7 @@
 	</section>
 	<section id="examples-scroll" class="examples" style="background-color: rgb(204, 214, 204); z-index: 70;">
 		<div class="container">
-			<h1 class="examples__title">Примеры работ</h1>
-			<h2 class="examples__title2">"Мы сделали много и не думаем останавливаться"</h2>
+			<h1 class="examples__title" style="margin-bottom: 2rem;">Работы учениц</h1>
 			<div class="examples__wrap">
 				<img class="rotate_left  element-animation" src="./src/assets/img/examples_school/1.webp" alt="">
 				<img class="rotate_right" src="./src/assets/img/examples_school/2.webp" alt="">
@@ -684,8 +683,7 @@
 	<!-- Reviews -->
 	<section class="reviews">
 		<div class="container">
-			<h1 class="reviews__title">Отзывы клиентов</h1>
-			<h2 class="reviews__title2">"Наши клиенты всегда довольны нашими услугами"</h2>
+			<h1 class="reviews__title" style="margin-bottom: 2rem;">Отзывы о курсах</h1>
 			<div class="reviews__wrap">
 				<div class="slider-container  element-animation">
 					<a class="arrow1" id="leftArrow" href="#">
